<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_feed"
        android:enabled="true"
        android:icon="@drawable/selector_feed"
        android:title="@string/text_feed"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_capture"
        android:enabled="true"
        android:icon="@drawable/selector_compose"
        android:title="@string/text_capture"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/selector_profile"
        android:title="@string/text_profile"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_logout"
        android:enabled="true"
        android:icon="?attr/homeAsUpIndicator"
        android:textColor="@color/purple_700"
        android:title="@string/text_logout"
        android:visible="true"
        app:showAsAction="always|withText" />
</menu>